[gd_scene load_steps=5 format=3 uid="uid://bd75w5043ofce"]

[ext_resource type="Script" path="res://scripts/controllers/game_contoller.gd" id="1_e746s"]
[ext_resource type="Resource" uid="uid://diqu44s4tis5w" path="res://resources/varied/theme/theme_varied.tres" id="2_5rr6q"]
[ext_resource type="Texture2D" uid="uid://m703ifpo8wny" path="res://PAUSE BACKGROUND  .png" id="3_0k5bc"]
[ext_resource type="Texture2D" uid="uid://clcwsg2nco5ot" path="res://Screenshot 2024-11-17 233551.png" id="3_ebgk3"]

[node name="Main" type="CanvasLayer"]
script = ExtResource("1_e746s")
quiz = ExtResource("2_5rr6q")
color_right = Color(0, 0.373541, 0, 1)
color_wrong = Color(0.492438, 0.0278214, 0.0552015, 1)

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_0k5bc")

[node name="Content" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="QuestionInfo" type="VBoxContainer" parent="Content"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -547.0
offset_right = 546.0
offset_bottom = 290.0
grow_horizontal = 2

[node name="QuestionText" type="Label" parent="Content/QuestionInfo"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_vertical = 6
theme_override_font_sizes/font_size = 50
text = "Question
"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="ImageHolder" type="Panel" parent="Content/QuestionInfo"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2

[node name="QuestionImage" type="TextureRect" parent="Content/QuestionInfo/ImageHolder"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_ebgk3")
expand_mode = 1
stretch_mode = 5

[node name="QuestionHolder" type="VBoxContainer" parent="Content"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -546.5
offset_top = -324.0
offset_right = 546.5
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 20

[node name="Button" type="Button" parent="Content/QuestionHolder"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 35

[node name="Button2" type="Button" parent="Content/QuestionHolder"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 35

[node name="Button3" type="Button" parent="Content/QuestionHolder"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 35

[node name="Button4" type="Button" parent="Content/QuestionHolder"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 35
